# JTC-AI-Hackathon-enablement

./: .gitignore  README.md  deploy-check.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml  pages.yml
Dummy Data/: JTC_AI_Hackathon.CSV.csv
Word Doc/: Stage 1.2 Instructions and Knowledge base.docx  Stage 1.3 Test Vendor Scout.docx  Stage 2.1 logic apps workflow.docx  Stage 2.2 Create OpenAPI connection.docx  Stage 3.1 Data analysis.docx  Updated stage 0.docx
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/: App.jsx  main.jsx
src/components/: HackathonAssistant.jsx  Layout.jsx
src/pages/: Home.jsx  Stage0Step.jsx  Stage1Overview.jsx  Stage1Step1.jsx  Stage1Step2.jsx  Stage1Step3.jsx  Stage2Overview.jsx  Stage2Step1.jsx  Stage2Step2.jsx  Stage2Step3.jsx  Stage3Overview.jsx  Stage3Step1.jsx  Stage3Step2.jsx  Stages.jsx
src/utils/: basePath.js
